--- a/test_integration/Websocket.Client.Sample/Websocket.Client.Sample.csproj
+++ b/test_integration/Websocket.Client.Sample/Websocket.Client.Sample.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
